--- a/src/css/app.css
+++ b/src/css/app.css
@@ -22,6 +22,10 @@ body {
   --texto-input-light: #b6b6b6;
   --color-disabled: #c4c4c4;
 }
+button.q-btn {
+  border-radius: 11px !important;
+  text-transform: capitalize;
+}
 .sombra-1 {
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
 }
@@ -92,6 +96,19 @@ a:visited {
 }
 .flex-responsive {
   display: flex;
+}
+
+.q-drawer__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.q-drawer__content::-webkit-scrollbar {
+  width: 3px;
+}
+.q-drawer__content::-webkit-scrollbar-thumb {
+  background: var(--q-accent);
+  border-radius: 20px;
 }
 @media only screen and (max-width: 600px) {
   .flex-responsive {
